# sistema-alerta-hidrica

./: .gitignore  ARCHITECTURE.md  GUIA.md  KAPSO_WHATSAPP.md  MS_AUTH.md  PLAN.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  vercel.json
apps/api/: .env.example  pyproject.toml
apps/api/ahora/: __init__.py  config.py  db.py  logging_setup.py  main.py  models.py  scheduler.py
apps/api/ahora/gee/: auth.py  ivc.py  layers.py  precipitation.py  sentinel1.py
apps/api/ahora/notify/: kapso.py  telegram.py
apps/api/ahora/orchestrator/: pipelines.py  runner.py
apps/api/ahora/routers/: alerts.py  analysis.py  config_api.py  cuencas.py  forecast.py  health.py  ivc.py  layers.py  municipalities.py  replay.py  telegram_helper.py  webhooks.py
apps/api/db/: init.sh  schema.sql
apps/api/db/migrations/: 001_municipality.sql  002_telegram.sql  003_telegram_per_muni.sql
apps/api/db/seeds/: case_studies.sql  municipalities.sql
apps/api/scripts/: dev.sh  install.sh
apps/web/: .env.local.example  middleware.ts  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/actions/: auth.ts  config.ts  telegram.ts
apps/web/app/alertas/: page.tsx
apps/web/components/: analysis-map.tsx  copy-link.tsx  cuenca-stats.tsx  earth-globe.tsx  forecast-card.tsx  ivc-explainer.tsx  kpi-card.tsx  layer-control.tsx  layer-legend.tsx  municipality-badge.tsx  outbox-live.tsx  replay-button.tsx  risk-map.tsx  severity-badge.tsx  telegram-action-buttons.tsx
apps/web/lib/: api.ts  session.ts  utils.ts
tools/: agua-asfalto-v3.js
(+8 files in other folders)
