[project]
name = "ahora-api"
version = "0.1.0"
description = "AHORA backend — geoespacial + orchestrator + alertas"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",
  "asyncpg>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "geoalchemy2>=0.15",
  "alembic>=1.13",
  "earthengine-api>=1.5",
  "httpx>=0.27",
  "shapely>=2.0",
  "structlog>=24.4",
  "rich>=13.9",
  "tenacity>=9.0",
  "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ahora*"]
